# logtest

./: .env
consumer_package/: pyproject.toml
consumer_package/consumer_package/: main.py
consumer_package/tests/: test_consumer_package.py
provider_package/: pyproject.toml
provider_package/logtest/: __init__.py
provider_package/logtest/logging/: main.py
provider_package/logtest/logging/submodule/: sub_logging.py
provider_package/logtest/loguru/: main.py
provider_package/logtest/loguru/submodule/: sub_loguru.py
provider_package/tests/: test_logtest.py
